--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://blueplanet.github.com
-title: Welcome to my Blog
-subtitle: memo for programs
+title: Welcome to the blog of blueplanet
+subtitle: memo for Ruby, Rails, etc...
 author: blueplanet
 simple_search: http://google.com/search
 description:
