sublime text plaintask

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://blueplanet.github.com
-title: Welcome to the blog of blueplanet
+title: 蒼い惑星の記録
 subtitle: memo for Ruby, Rails, etc...
 author: blueplanet
 simple_search: http://google.com/search
