--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 markdown: kramdown
-highlighter: true
+highlighter: pygments
 kramdown:
   input: GFM
 
@@ -27,7 +27,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://blueplanet42.info
+production_url : https://blueplanet42.info
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
